--- a/app/static/doctor_style.css
+++ b/app/static/doctor_style.css
@@ -1,6 +1,6 @@
 @import "base_style.css";
 
-/* SIDEBAR USER */
+/* -------------------------------------------- SIDEBAR USER -------------------------------------------- */
 .sidenav-user-bg {
     font-size: 12px;
     display: flex;
@@ -13,175 +13,7 @@
     overflow: hidden;
 }
 
-/* DASHBOARD */
-.main-bg {
-    width: 1350px; 
-    height: 600px; 
-    background-color: white;
-    box-shadow: 10px 10px 20px 10px var(--blueC);
-    border-radius: 12px;
-    top: 50%; 
-    left: 53%; 
-    transform: translate(-50%, -50%);
-    position: absolute;
-}
-
-/* PATIENT */
-.patient-header p {
-    position: absolute;
-    top: 40px;
-    left: 150px;
-    font-weight: 900;
-    font-size: 22px;
-}
-
-.patient-table {
-    position: relative; 
-    width: 1325px; 
-    top: 85px; 
-    left: 150px;
-    line-height: 1.5;
-    color: black;
-    background-color: white;
-    font-size: 16px;
-}
-
-/* Default table */
-.table {
-    margin-bottom: 1rem;
-    text-align: center;
-}
-
-.table th,
-.table td {
-    padding: 0.30rem;
-    width: 50px;
-}
-
-.table thead {
-    background-color: var(--blueB);
-    color: black;
-}
-
-/* Striped table */
-.table-striped tbody tr:nth-of-type(even) {
-    background-color: var(--blueC)
-}
-
-/* Example button styling */
-.view-btn {
-    background-color: var(--blueA); 
-    color: white; 
-    border: none;
-    padding: 8px 16px;
-    border-radius: 4px; 
-    cursor: pointer; 
-}
-  
-/* Hover effect for the button */
-.view-btn:hover {
-    transform: scale(103%);
-}
-
-/* Pagination container */
-.pagination {
-    display: flex;
-    padding-left: 0;
-    list-style: none;
-}
-  
-/* Individual pagination item */
-.page-link {
-    position: relative;
-    display: block;
-    padding: 0.5rem 0.75rem;
-    margin-left: -1px;
-    line-height: 1.25;
-    color: #007bff; 
-    background-color: #fff; 
-    border: 1px solid #dee2e6; 
-}
-  
-/* Active page item */
-.page-item.active .page-link {
-    z-index: 2;
-    color: #fff; 
-    background-color: #007bff; 
-    border-color: #007bff; 
-}
-  
-/* Disabled page item */
-.page-item.disabled .page-link {
-    pointer-events: none;
-    color: #6c757d; 
-    background-color: #D3D3D3; 
-    border-color: #dee2e6; 
-}
-  
-/* Hover effect */
-.page-link:hover {
-    color: #0056b3;
-    text-decoration: none;
-    background-color: #e9ecef; 
-}
-
-/* search */
-.dataTables_wrapper .dataTables_filter input {
-    padding: 0.375rem 0.5rem;
-    margin-bottom: 1rem; 
-    color: black; 
-    background-color: white; 
-    border: 1px solid var(--blueB); 
-    border-radius: 0.25rem; 
-    margin-left: 5px;
-}
-
-.dataTables_wrapper .dataTables_filter {
-    margin-left: 1065px;
-    margin-top: 0px;
-}
-
-.dataTables_wrapper .dataTables_length {
-    margin-bottom: 0px;
-    position: absolute;
-}
-  
-/* Focus state for search input */
-.dataTables_wrapper .dataTables_filter input:focus {
-    color: black; 
-    background-color: white; 
-    border-color:  var(--blueB); 
-    outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(163, 213, 255, 1) 
-}
-
-/* SHOW NUMBER ENTRIES */
-.dataTables_wrapper .dataTables_length label {
-    font-weight: normal;
-    text-align: left;
-    white-space: nowrap;
-}
-  
-.dataTables_wrapper .dataTables_length select {
-    width: auto;
-    display: inline-block;
-    padding: 0.375rem 0.25rem;
-    color: #495057; 
-    background-color: #fff; 
-    border: 1px solid var(--blueB); 
-    border-radius: 0.25rem; 
-}
-  
-/* Focus state for "Show [number] entries" dropdown */
-.dataTables_wrapper .dataTables_length select:focus {
-    color: #495057; 
-    background-color: #fff; 
-    border-color: var(--blueB); 
-    outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(163, 213, 255, 1); 
-}
- 
-/* Add Icon */
+/* -------------------------------------------- ADD/UPDATE PATIENT, ADD ASSESSMENT, REQUEST LAB TEST ICON -------------------------------------------- */
 .add-icon img {
     width: 60px;
     top: 625px;
@@ -195,6 +27,843 @@
     transform: scale(105%);
     cursor: pointer;
 }
+
+.add-icon img:active {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
+    transform: translateY(1px);
+}
+
+.update-icon {
+    top: 100px;
+    width: 60px;
+    left: 1445px;
+    border-radius: 100%;
+    z-index: 99;
+    position: fixed;
+}
+
+.update-icon:hover {
+    transform: scale(105%);
+    cursor: pointer;
+}
+
+.update-icon:active {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
+    transform: translateY(1px);
+}
+
+/* -------------------------------------------- BACK ICON -------------------------------------------- */
+.back-icon img {
+    position: absolute;
+    width: 25px;
+    z-index: 1;
+    top: 55px;
+    left: 145px;
+}
+
+.back-icon img:active {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
+    transform: translateY(2px);
+}
+
+/* -------------------------------------------- PATIENT DETAILS NAVBAR -------------------------------------------- */
+.nav-underline {
+    display: flex;
+    margin-right: 150px;
+    top: 50px;
+    left: 200px;
+    position: absolute;
+}
+
+.nav-item:hover {
+    color: var(--grayA); 
+    text-decoration: none;
+    background-color: var(--grayB); 
+    transition: 0.2s;
+}
+
+.nav-item:active {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
+    transform: translateY(1px);
+}
+
+.nav-underline .nav-link {
+    border: none; 
+    text-decoration: none; 
+    padding: 0.5rem 1rem; 
+    color: var(--grayA); 
+}
+
+.nav-underline .nav-link.active {
+    border-bottom: 2px solid var(--blueD);
+    color: var(--blueD); 
+}
+
+/* -------------------------------------------- PATIENT TABLE -------------------------------------------- */
+.patient-header p {
+    position: absolute;
+    top: 40px;
+    left: 150px;
+    font-weight: 900;
+    font-size: 22px;
+}
+
+/* -------------------------------------------- PATIENT INFORMATION -------------------------------------------- */
+.patient-bg {
+    position: absolute;
+    width: 1230px;  
+    height: 100%; 
+    background-color: white;
+    box-shadow: 10px 10px 20px 10px var(--blueC);
+    top: 85px;
+    left: 200px;
+}
+
+/* Input boxes */
+.inputBox {
+    position: relative;
+}
+
+.inputBox input {
+    width: 100%;
+    padding: 10px;
+    border: 2px solid var(--blueB);
+    border-radius: 5px;
+    outline-color: var(--blueB);
+    color: black;
+    font-size: 1em;
+}
+
+.inputBox span {
+    position: absolute;
+    top: -8px;
+    left: 15px;
+    padding: 0 10px;
+    background: white; 
+    font-size: 0.75em;
+    color: var(--blueA);
+    font-weight: 900;
+    font-size: 14px;
+}
+
+.inputBox input:focus {
+    color: black; 
+    background-color: white; 
+    outline: 0;
+    box-shadow: 0 0 0.5rem 0 rgba(163, 213, 255, 1) 
+} 
+
+.inputBox.fName, .inputBox.mName, .inputBox.lName, .inputBox.job, .inputBox.c_number, .inputBox.email, .relationship, .inputBox.dob, .nationality {
+    width: 300px;
+}
+
+.inputBox.e_person {
+    width: 420px;
+}
+
+.inputBox.birth_place, .inputBox.p_address {
+    width: 665px;
+}
+
+.status, .gender, .bloodType, .inputBox.status {
+    width: 170px;
+}
+
+.religion, .inputBox.e_number {
+    width: 210px;
+}
+
+.inputBox.age {
+    width: 100px;
+}
+
+/* Dropdown styles */
+input, select {
+    padding: 10px;
+    border: 2px solid var(--blueB);
+    border-radius: 5px;
+    outline-color: var(--blueB);
+    color: black;
+    font-size: 1em;
+}
+
+/* Align each row */
+.p_row {
+    position: relative;
+    justify-content: center;
+    display: flex;
+}
+
+.group-info div {
+    top: 5px;
+    margin-top: 17px;
+    justify-content: center;
+    align-items: center;
+}
+
+.p_row.firstRow {
+    gap: 70px;
+}
+
+.p_row.secondRow {
+    gap: 55px;
+}
+
+.p_row.thirdRow {
+    gap: 75px;
+}
+
+.p_row.fourthRow {
+    gap: 70px;
+}
+
+.p_row.fifthRow {
+    gap: 75px;
+}
+
+.p_row.sixthRow {
+    gap: 55px;
+}
+
+/* Modal for success and error messages */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+  
+.modal-dialog {
+    position: relative;
+    width: auto;
+    margin: 10% auto;
+}
+  
+.modal-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    background-color: #fff;
+    border-radius: 5px;
+    margin: 0 auto;
+    padding: 10px;
+}
+  
+.modal-header {
+    padding: 10px;
+    border-bottom: 1px solid var(--blueA);
+    color: var(--blueA);
+}
+  
+.modal-body {
+    padding: 20px;
+    font-size: 16px;
+}
+  
+.modal-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+  
+.modal-title {
+    margin: 0;
+}
+  
+/* modal confirmation button */
+.btn-done {
+    color: white;
+    background-color: var(--blueA);
+    border: none;
+    border-radius: 5px;
+    width: 100px;
+    height: 35px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+/* -------------------------------------------- MEDICAL HISTORY, ASSESSMENT, LAB REQUEST, PRESCRIPTION BACKGROUNDS -------------------------------------------- */
+.patient-bg.history {
+    width: 1230px;  
+    height: 2650px; 
+}
+
+.patient-bg.assessment {
+    width: 1230px;  
+    height: 3300px; 
+}
+
+.patient-bg.request {
+    width: 1230px;  
+    height: 2000px; 
+}
+
+.patient-bg.prescription {
+    width: 1230px;  
+    height: 3000px; 
+}
+
+/* -------------------------------------------- HEADER FOR EACH FORMS -------------------------------------------- */
+.med-header {
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 1100px;  
+    height: 50px; 
+    background-color: var(--blueC);
+    color: var(--blueA);
+    font-weight: 900;
+    left: 65px;
+}
+
+.med-header.A {
+    top: 50px;
+}
+
+.med-header.B {
+    top: 255px;   
+}
+
+.med-header.C {
+    top: 750px;
+}
+
+.med-header.D {
+    top: 1105px;   
+}
+
+.med-header.E {
+    top: 1600px;
+}
+
+.med-header.F {
+    top: 1950px;
+}
+
+.med-header.G {
+    top: 2255px;
+}
+
+.med-header.H {
+    top: 480px;
+}
+
+.med-header.I {
+    top: 835px;
+}
+
+.med-header.J {
+    top: 1120px;
+}
+
+.med-header.K {
+    top: 2550px;
+}
+
+.med-header.L {
+    top: 330px;
+}
+
+.med-header.M {
+    top: 620px;
+}
+
+.med-header.N {
+    top: 830px;
+}
+
+.med-header.O {
+    top: 1235px;
+}
+
+.med-header.P {
+    top: 1545px;
+}
+
+.med-header.prescription {
+    top: 390px;
+}
+
+/* Sub messages */
+.subtext {
+    position: relative;
+    top: 95px;
+    left: 65px;
+    font-size: 14px;
+}
+
+/* Checkboxes */
+.checkbox {
+    display: flex;
+    gap: 5px;
+    margin-bottom: 20px;
+    font-size: 17px;
+}
+
+/* More row arrangements */
+.p_row.immunize {
+    gap: 20px;
+    margin-top: 165px;
+    margin-bottom: 15px;
+}
+
+.p_row.one {
+    gap: 20px;
+    margin-top: 180px;
+}
+
+.p_row.two {
+    gap: 90px;
+    margin-top: 130px;
+}
+
+.p_row.three {
+    gap: 10px;
+    margin-top: 180px;
+}
+
+.p_row.four {
+    gap: 10px;
+    margin-top: 30px;
+}
+
+.p_row.five {
+    gap: 26px;
+    margin-top: 160px;
+}
+
+.p_row.six {
+    gap: 24px;
+    margin-top: 30px;
+}
+
+.p_row.seven {
+    gap: 16px;
+    margin-top:150px;
+}
+
+.p_row.eight {
+    gap: 16px;
+    margin-top: 30px;
+}
+
+.p_row.nine {
+    gap: 16px;
+    margin-top: 155px;
+}
+
+.p_row.ten {
+    gap: 16px;
+    margin-top: 160px;
+}
+
+/* Input box for past history */
+.inputBox.p_history {
+    width: 270px;
+}
+
+/* Input box for the date, the condition started */
+.inputBox.h_date {
+    width: 165px;
+}
+
+/* Dropdown for social history */
+.historyA {
+    width: 120px;
+}
+
+.historyB {
+    width: 240px;
+}
+
+.historyC {
+    width: 308px;
+}
+
+.historyD {
+    width: 330px;
+}
+
+.inputBox.specifications, .inputBox.others {
+    width: 1005px; 
+    top: 20px;
+    left: 110px;
+    position: relative;
+    font-size: 14px;
+    margin-bottom: 30px;
+}
+
+.inputBox.subject {
+    width: 1000px; 
+    top: 160px;
+    left: 115px;
+    position: relative;
+    font-size: 14px;
+}
+
+.t_surgery {
+    width: 400px;
+}
+
+.medications textarea {
+    width: 1000px;
+    height: 150px;
+    border: 1px solid var(--blueB);
+    border-radius: 10px;
+    resize: none;
+    padding: 10px;
+    font-size: 16px;
+}
+
+.medications textarea:focus {
+    box-shadow: 0 0 0.5rem 0 rgba(163, 213, 255, 1);
+    outline: none;
+}
+
+/* -------------------------------------------- MEDICAL ASSESSMENT -------------------------------------------- */
+.assessment-table {
+    position: relative; 
+    width: 1100px; 
+    top: 50px; 
+    left: 65px;
+    line-height: 1.5;
+    color: black;
+    background-color: white;
+    font-size: 16px;
+}
+
+/* Text area */
+.complaints textarea {
+    width: 1000px;
+    height: 200px;
+    border: 1px solid var(--blueB);
+    border-radius: 10px;
+    resize: none;
+    padding: 10px;
+    font-size: 16px;
+}
+
+.complaints textarea:focus {
+    box-shadow: 0 0 0.5rem 0 rgba(163, 213, 255, 1);
+    outline: none;
+}
+
+
+/* Assessment rows */
+.p_row.vitalRowA {
+    gap: 19px;
+    margin-top: 160px;
+}
+
+.p_row.vitalRowB {
+    gap: 19px;
+    margin-top: 40px;
+}
+
+.p_row.vitalRowC {
+    gap: 25px;
+    margin-top: 150px;
+}
+
+.p_row.vitalRowD {
+    gap: 26px;
+    margin-top: 40px;
+}
+
+.p_row.vitalRowE {
+    gap: 23px;
+    margin-top: 40px;
+}
+
+.p_row.vitalRowF {
+    gap: 23px;
+    margin-top: 40px;
+}
+
+.p_row.vitalRowH {
+    gap: 23px;
+    margin-top: 150px;
+}
+
+/* Input boxes for assessment */
+.inputBox.vitalsA {
+    width: 320px;
+}
+
+.inputBox.vitalsB {
+    width: 150px;
+}
+
+.inputBox.vitalsC {
+    width: 200px;
+}
+
+.inputBox.vitalsD {
+    width: 700px;
+}
+
+.inputBox.vitalsE {
+    width: 680px;
+}
+
+.inputBox.vitalsF {
+    width: 690px;
+}
+
+.inputBox.vitalsG {
+    width: 662px;
+}
+
+.inputBox.vitalsH {
+    width: 584px;
+}
+
+.inputBox.vitalsI {
+    width: 581px;
+}
+
+.inputBox.vitalsJ {
+    width: 553px;
+}
+
+/* Assessment header */
+.med-header.Q {
+    top: 520px;
+}
+
+.med-header.R {
+    top: 680px;
+}
+
+.med-header.S {
+    top: 1175px;
+}
+
+.med-header.T {
+    top: 1540px;
+}
+
+.med-header.U {
+    top: 2035px;
+}
+
+.med-header.V {
+    top: 2385px;
+}
+
+.med-header.W {
+    top: 2690px;
+}
+
+/* -------------------------------------------- LABORATORY RESULTS -------------------------------------------- */
+/* Lab results rows */
+.p_row.rowOne {
+    gap: 70px;
+    margin-top: 160px;
+}
+
+.p_row.rowTwo {
+    gap: 55px;
+    margin-top: 40px;
+}
+
+.p_row.rowThree {
+    gap: 32px;
+    margin-top: 150px;
+}
+
+.p_row.rowFour {
+    gap: 40px;
+    margin-top: 40px;
+}
+
+/* Lab results text area */
+.labTest textarea {
+    width: 1000px;
+    height: 250px;
+    border: 1px solid var(--blueB);
+    border-radius: 10px;
+    resize: none;
+    padding: 10px;
+    font-size: 16px;
+}
+
+.labTest textarea:focus {
+    box-shadow: 0 0 0.5rem 0 rgba(163, 213, 255, 1);
+    outline: none;
+}
+
+/* -------------------------------------------- PRESCRIPTION -------------------------------------------- */
+.cms-logo.prescription {
+    margin-top: 70px;
+    justify-content: center;
+    position: relative;
+}
+
+.rx img {
+    width: 100px;
+    position: relative;
+    margin-left: 100px;
+}
+
+.doctor {
+    position: absolute;
+    top: 190px;
+    left: 230px;
+}
+
+.doctor.name {
+    left: 360px;
+}
+
+.p_date {
+    position: absolute;
+    top: 190px;
+    left: 830px;
+}
+
+.p_date.current {
+    left: 890px;
+}
+
+.line-border {
+    border: 1px solid black;
+    width: 895px;
+    left: 230px;
+    top: -25px;
+    position: relative;
+}
+
+/* Prescription rows */
+.columnA {
+    position: absolute;
+    top: 300px;
+    left: 115px;
+}
+
+.columnB {
+    position: absolute;
+    top: 300px;
+    left: 215px;
+}
+
+.columnC {
+    position: absolute;
+    top: 300px;
+    left: 830px;
+}
+
+.columnD {
+    position: absolute;
+    top: 300px;
+    left: 1010px;
+}
+
+.columnA.address, .columnB.p_adress, .columnC.gender, .columnD.p_gender  {
+    top: 340px;
+}
+
+.p_row.row3 {
+    margin-top: 210px;
+}
+
+.p_row.row4 {
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.p_row.row5 {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.p_row.row6 {
+    margin-top: 80px;
+}
+
+.inputBox.prescription {
+    width: 1040px;
+}
+
+.inputBox.dosage, .inputBox.route {
+    width: 510px;
+}
+
+.btn-prescription {
+    color: var(--blueA);
+    font-weight: 900;
+    background-color: var(--blueB);
+    border: none;
+    border-radius: 5px;
+    width: 200px;
+    height: 35px;
+    font-size: 16px;
+    margin-top: 50px;
+}
+
+.btn-prescription:active {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
+    transform: translateY(1px);
+}
+
+.btn-prescription:hover {
+    transform: scale(101%);
+    cursor: pointer;
+}
+
+@media print {
+    @page {
+        size: 8.5in 11in;
+        margin: 0;
+    }
+
+    body {
+        width: 8.5in;
+        height: 11in;
+        margin: 0 auto; 
+        box-sizing: border-box; 
+    }
+
+    .patient-bg.prescription {
+        display: block;
+        position: absolute; 
+        height: 100%; 
+        top: 0px;
+        left: 0px;
+    }
+
+    .sidenav-bg, .back-icon, .nav.nav-underline, .btn-container, .med-header.prescription {
+        display: none; 
+    }
+}
+
+.print-icon img {
+    width: 60px;
+    top: 625px;
+    left: 1445px;
+    border-radius: 100%;
+    z-index: 99;
+    position: fixed;
+}
+
+.print-icon img:hover {
+    transform: scale(105%);
+    cursor: pointer;
+}
+
+.print-icon img:active {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
+    transform: translateY(1px);
+}
+
 
 /* APPOINTMENT */
 /* style here */
