--- a/app/templates/doctor/appointment/appointment.html
+++ b/app/templates/doctor/appointment/appointment.html
@@ -1,46 +1,50 @@
 {% extends "base.html" %}
-{% block title %}DocCare | Profile{% endblock title %}
-{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='receptionist_style.css') }}"> {% endblock %}
-
+{% block title %}DocCare | Appointment{% endblock title %}
+{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='doctor_style.css') }}"> {% endblock %}
 {% block content %}
-
     <div class="sidenav-bg">
         <div class="cms-logo">
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
         </div>
         <ul>
-            <a href="{{ url_for('receptionist.dashboard') }}">
+            <a href="{{ url_for('doctor.dashboard') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
                     <p>Dashboard</p>
                 </li>
-            </a>    
-            <a href="{{ url_for('receptionist.calendar') }}">
+            </a>
+            <a href="{{ url_for('doctor.calendar') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Calendar.png') }}"> 
                     <p>Calendar</p>
                 </li>
             </a>
-            <a href="{{ url_for('receptionist.appointment') }}">
+            <li class="selected-icon-bg">
+                <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
+                <p>Appointment</p>
+            </li>
+            <a href="{{ url_for('doctor.patient') }}">
                 <li class="icon-bg">
-                    <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
-                    <p>Appointment</p>
+                    <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
+                    <p>Patient</p>
                 </li>
             </a>
-            <li class="selected-icon-bg">
-                <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
-                <p>Profile</p>
-            </li>
+            <a href="{{ url_for('doctor.profile') }}">
+                <li class="icon-bg">
+                    <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
+                    <p>Profile</p>
+                </li>
+            </a>
         </ul>
         <div class="sidenav-user-bg">
             <img src="{{ url_for('static', filename='images/user.jpg') }}" class="user-img">
             <div>
                 <h3>Eda Grace P.</h3>
-                <p>Receptionist</p>
+                <p>Family Medicine</p>
             </div>
         </div>
         <ul>
-            <a href="{{ url_for('receptionist.logout') }}">
+            <a href="{{ url_for('doctor.logout') }}">
                 <li class="logout">
                     <img src="{{ url_for('static', filename='images/Logout.png') }}">
                     <p>Logout</p>
@@ -48,5 +52,5 @@
             </a>
         </ul>
     </div>
-    
+
 {% endblock %}
