--- a/app/templates/doctor/patient/patient.html
+++ b/app/templates/doctor/patient/patient.html
@@ -1,23 +1,40 @@
 {% extends "base.html" %}
 {% block title %}DocCare | Patient{% endblock title %}
-{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='medtech_style.css') }}"> {% endblock %}
+{% block link %} 
+    <link rel="stylesheet" href="{{ url_for('static', filename='doctor_style.css') }}">
+{% endblock %}
+
 {% block content %}
+
+    <!-- NAVIGATION -->
     <div class="sidenav-bg">
         <div class="cms-logo">
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
         </div>
         <ul>
-            <a href="{{ url_for('medtech.dashboard') }}">
+            <a href="{{ url_for('doctor.dashboard') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
                     <p>Dashboard</p>
+                </li>
+            </a>
+            <a href="{{ url_for('doctor.calendar') }}">
+                <li class="icon-bg">
+                    <img src="{{ url_for('static', filename='images/Calendar.png') }}"> 
+                    <p>Calendar</p>
+                </li>
+            </a>
+            <a href="{{ url_for('doctor.appointment') }}">
+                <li class="icon-bg">
+                    <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
+                    <p>Appointment</p>
                 </li>
             </a>
             <li class="selected-icon-bg">
                 <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
                 <p>Patient</p>
             </li>
-            <a href="{{ url_for('medtech.profile') }}">
+            <a href="{{ url_for('doctor.profile') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                     <p>Profile</p>
@@ -28,11 +45,11 @@
             <img src="{{ url_for('static', filename='images/user.jpg') }}" class="user-img">
             <div>
                 <h3>Eda Grace P.</h3>
-                <p>Medtech</p>
+                <p>Family Medicine</p>
             </div>
         </div>
         <ul>
-            <a href="{{ url_for('medtech.logout') }}">
+            <a href="{{ url_for('doctor.logout') }}">
                 <li class="logout">
                     <img src="{{ url_for('static', filename='images/Logout.png') }}">
                     <p>Logout</p>
@@ -40,13 +57,13 @@
             </a>
         </ul>
     </div>
-    
+
     <!-- PATIENT RECORD -->
     <div class="patient-header">
-        <p>LABORATORY TEST RESULTS</p>
+        <p>PATIENTS</p>
     </div>
 
-    <div class="patient-table test">
+    <div class="patient-table">
         <table id="example" class="table table-striped" style="width:100%">
             <thead>
                 <tr>
@@ -54,34 +71,49 @@
                     <th>LAST NAME</th>
                     <th>GENDER</th>
                     <th>AGE</th>
-                    <th>PHYSICIAN</th>
-                    <th>RESULT</th>
+                    <th>CONTACT NUMBER</th>
+                    <th>RECORD</th>
                     <th>ACTION</th>
                 </tr>
             </thead>
             <tbody>
+                {% for patient in patients %}
                 <tr>
-                    <td>SAFIYA</td>
-                    <td>PARAGOSO</td>
-                    <td>FEMALE</td>
-                    <td>13</td>
-                    <td>EDA GRACE PARAGOSO</td>
+                    <td>{{ patient[1] }}</td>
+                    <td>{{ patient[3] }}</td>
+                    <td>{{ patient[6] }}</td>
+                    <td>{{ patient[4] }}</td>
+                    <td>{{ patient[18] }}</td>
                     <td>
                         <!-- VIEW RECORD -->
-                        <a href="{{ url_for('doctor.patient_record') }}">
-                            <button class="view-btn">VIEW</button>
-                        </a>
+                        <form method="GET" action="/doctor/patient_record/">
+                            <div class="delete-icon">
+                                <input id="patient_id" name="patient_id" value="{{ patient[0] }}" type="hidden">
+                                <button type="submit" style="background: none; border: none;">
+                                    <img src="{{ url_for('static', filename='images/Folder.png') }}" title="Patient Record">
+                                </button>
+                            </div>
+                        </form> 
                     </td>
                     <td>
                         <!-- DELETE RECORD -->
                         <a href="#">
-                            <button class="view-btn delete">DELETE</button>
+                            <div class="delete-icon">
+                                <img src="{{ url_for('static', filename='images/Delete.png') }}" title="Delete Record">
+                            </div>
                         </a>
                     </td>
                 </tr>
+                {% endfor %}
             </tbody>
         </table>
     </div>
+
+    <a href="{{ url_for('doctor.add_patient') }}">
+        <div class="add-icon">
+            <img src="{{ url_for('static', filename='images/Add Icon.png') }}">
+        </div>
+    </a>
 
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script src=" https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
@@ -89,7 +121,5 @@
     <script>
         new DataTable('#example');
     </script>
-
-
 
 {% endblock %}
