--- a/app/static/receptionist_style.css
+++ b/app/static/receptionist_style.css
@@ -122,6 +122,19 @@
     
 }
 
+.appointment_entries{
+    width: 100%;
+    height: 5%;
+    background-color: #fff4;
+    text-align: center;
+    font-family: 'Inter';
+    font-weight: bolder;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    margin-left: 1.25%;
+}
+
 .doccare-table-appointment-content{
     width: 95%;
     max-height: calc(90% - 1.6rem);
