--- a/app/templates/receptionist/appointment/appointment.html
+++ b/app/templates/receptionist/appointment/appointment.html
@@ -24,15 +24,18 @@
                             <span class="material-symbols-outlined">&#xe8b6;</span>
                         </div>
                     </section>
-                    
-                    <section class="doccare-table-appointment-content">
+                    <section class="appointment_entries">
+                    <!--<hr width="100%" color="blue"> -->
+                        </br>  
                         <label for="entriesPerPage">Show entries:</label>
                         <select id="entriesPerPage" name="entriesPerPage" class="styled-dropdown">
                             <option value="10">10</option>
                             <option value="20">20</option>
                             <option value="50">50</option>
                             <option value="100">100</option>
-                        </select>
+                        </select> 
+                    </section>
+                    <section class="doccare-table-appointment-content">
                         <table>
                             <thead>
                                 <tr>
