Added more styles base in Figma

--- a/app/static/receptionist_add_style.css
+++ b/app/static/receptionist_add_style.css
@@ -1,19 +1,21 @@
-.doccare-add-forms-background{
+.doccare-add-forms-background {
     background: #F7FCFF;
+    height: 1440px;
 }
-.appointment-add-forms{
+.appointment-add-forms {
     width: 520px;
-    height: 1000px;
+    height: 1200px;
     flex-shrink: 0;
     border-radius: 50px;
     background: #FFF;
     box-shadow: 0px 5px 20px 0px rgba(2, 119, 189, 0.80);
     box-sizing: border-box;
-    margin-left: 10%;
+    margin-left: 6.5%;
+    margin-right: 15%;
     text-align: center;
 }
 
-.doccare-add-appointment-paragraph p{
+.doccare-add-appointment-paragraph p {
     width: 438px;
     color: #000;
     text-align: justify;
@@ -35,7 +37,7 @@
   margin-left: 6.5%;
 }
 
-.doccare-forms-appointment input{
+.doccare-forms-appointment input {
     width: 450px;
     height: 45px;
     flex-shrink: 0;
@@ -44,7 +46,7 @@
     background: #FFF;
 }
 
-.doccare-forms-appointment label{
+.doccare-forms-appointment label {
     color: #363636;
     font-family: Inter;
     font-size: 16px;
@@ -53,18 +55,18 @@
     line-height: normal;
 }
 
-.doccare-forms-appointment select{
+.doccare-forms-appointment select {
     width: 450px;
     height: 45px;
 }
-.asterisk{
+.asterisk {
     color:red !important; 
 }
 
 .date-format{
     font-weight: normal !important;
 }
-.doccare-appointment-continue-button{
+.doccare-appointment-continue-button {
     width: 112px;
     height: 45px;
     flex-shrink: 0;
@@ -77,4 +79,120 @@
     font-weight: 700;
     line-height: normal;
     margin-top: 10%;
+}
+
+.doccare-title label {
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    line-height: normal;
+}
+
+.doccare-first {
+    color: #000;
+    font-weight: 400;
+}
+
+.doccare-second {
+    color: #0277BD;
+    font-weight: 700;
+}
+
+.doccare-title {
+    margin-left: 80%;
+    display: flex;
+    align-items: center;
+}
+
+.doccare-home-icon {
+    margin-left: 90%;
+    transition: transform 0.2s; /* Add a smooth transition effect for the hover animation */
+    cursor: pointer;
+}
+
+.doccare-home-icon:hover {
+    transform: scale(1.25);
+    z-index: 1;
+}
+
+.doccare-main-content {
+    display: flex;
+    align-items: flex-start;
+}
+
+.doccare-circle {
+    width: 180px;
+    height: 185px;
+    background: #0277BD;
+    border-radius: 50%;
+    border: 10px solid white;
+    margin-left: 118px;
+}
+
+.doccare-rectangle {
+    width: 420px;
+    height: 100px;
+    border-radius: 20px;
+    background: #A3D5FF;
+    box-shadow: 0px 4px 4px 0px rgba(2, 119, 189, 0.50);
+    margin-top: 35%;
+}
+
+.doccare-other-things{
+    display: inline-block;
+    margin-right:15%;
+    z-index: 2; 
+}
+
+.overlay-container {
+    position: relative;
+    margin-top: 300px;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1; /* Ensure the overlay is on top of other content */
+}
+
+.numbers-on-top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.numbers-on-top label {
+    color: #FFF;
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px;
+    width: 30px;
+    height: 30px;
+    border-radius: 100px;
+    text-align: center;
+    transition: transform 0.2s;
+    margin: 0 2%; /* Adjust margin as needed */
+}
+
+.number-one {
+    transform: scale(1.20);
+    border-radius: 100px;
+    background: #0277BD;
+}
+
+.number-two {
+    transform: scale(1.00);
+    border-radius: 100px;
+    background: rgba(2, 119, 189, 0.50);;
+}
+
+.number-three {
+    transform: scale(1.00);
+    border-radius: 100px;
+    background: rgba(2, 119, 189, 0.50);;
 }
