url for book an appointment is added!

--- a/app/templates/receptionist/dashboard/dashboard.html
+++ b/app/templates/receptionist/dashboard/dashboard.html
@@ -50,7 +50,7 @@
     </div>
     <main>
         <p class="date-time" id="demo"></p>
-        <a href="#">
+        <a href="{{ url_for('receptionist.add_appointment') }}">
             <div class="add-icon">
                 <img src="{{ url_for('static', filename='images/Add Appointment.png') }}">
             </div>
