--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,10 +3,35 @@
 {% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='base_style.css') }}"> {% endblock %}
 
 {% block content %}
+<div class="body-login">
+    <form class="login-form" id="login-form">
+        <div class="container margin-tb">
+            <span class="doc">Doc</span><span class="care">Care</span>
+        </div>
 
-    <a href="{{url_for('admin.dashboard')}}">Login Admin</a>
-    <a href="{{url_for('doctor.dashboard')}}">Login Doctor</a>
-    <a href="{{url_for('medtech.dashboard')}}">Login Medtech</a>
-    <a href="{{url_for('receptionist.dashboard')}}">Login Receptionist</a>
+        <div class="container padding">
+            <div class="form-group">
+                <label class="title" for="username">EMAIL</label>
+                <input type="text" name="username" id="username" class="form-input" placeholder="username@gmail.com" autocomplete="off" required>
+            </div>
+        
+            <div class="form-group">
+                <label class="title" for="password">PASSWORD</label>
+                <input type="password" name="password" id="password" class="form-input" autocomplete="off" required>
+            </div>
+        </div>
+            
+        <div class="container margin-t">
+            <button class="login-button" name="login-button" id="login-button">Log In</button>
+        </div>
+
+    </form>
+
+    <div class="container-2">
+        <span class="app-info">Version 1.0</span>
+        <span class="app-info" >Copyright © 2023 by DocCare All rights reserved.</span>
+    </div>
+    
+</div>
 
 {% endblock %}
