--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -50,10 +50,10 @@
     width: 80px;  
     height: 700px; 
     background-color: var(--blueC);
-    border-radius: 50px; 
+    /* border-radius: 50px;  */
     position: fixed;  
-    margin-top: 6px;
-    margin-left: 10px;
+    /* margin-top: 6px;
+    margin-left: 10px; */
     padding: 8px;
     z-index: 1;
 }
@@ -163,19 +163,24 @@ ul li p {
     position: absolute;
     display: flex;
     top: 60px;
-    left: 1120px;
-}
-
-.date-time.medtech {
-    left: 1160px;
+    left: 1140px;
 }
 
 /* -------------------------------------------- PATIENT TABLE -------------------------------------------- */
+.patient-header p {
+    position: absolute;
+    top: 50px;
+    left: 145px;
+    font-weight: 900;
+    font-size: 18px;
+}
+
+
 .patient-table {
     position: relative; 
     width: 1330px; 
     top: 85px; 
-    left: 150px;
+    left: 145px;
     line-height: 1.5;
     color: black;
     background-color: white;
@@ -184,10 +189,6 @@ ul li p {
 
 .patient-table.request {
     top: 190px; 
-}
-
-.patient-table.test {
-    top: 100px; 
 }
 
 .table {
@@ -335,12 +336,12 @@ ul li p {
     box-shadow: 0 0 0.5rem 0 rgba(163, 213, 255, 1); 
 }
 
-/* BUTTONS */
+/* -------------------------------------------- BUTTONS -------------------------------------------- */
 .btn-container {
     display: flex;
     justify-content: center; 
     align-items: center; 
-    margin-top: 35px;
+    margin-top: 50px;
 }
 
 .btn-submit {
@@ -349,7 +350,7 @@ ul li p {
     border: none;
     border-radius: 5px;
     width: 100px;
-    height: 35px;
+    height: 40px;
     font-size: 16px;
     cursor: pointer;
 }
@@ -362,4 +363,142 @@ ul li p {
 .btn-submit:active {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
     transform: translateY(1px);
+}
+
+.btn-submit.remove {
+    background-color: #EE4B2B;
+    margin-top: 0px;
+    position: static;
+    height: 40px;
+    width: 120px;
+}
+
+.btn-submit.test {
+    background-color: var(--blueA);
+    position: absolute;
+    height: 40px;
+    width: 120px;
+}
+
+/* -------------------------------------------- ROW -------------------------------------------- */
+.p_row {
+    position: relative;
+    justify-content: center;
+    display: flex;
+}
+
+/* -------------------------------------------- INPUT BOXES -------------------------------------------- */
+.inputBox {
+    position: relative;
+}
+
+.inputBox input {
+    width: 100%;
+    padding: 10px;
+    border: 2px solid var(--blueB);
+    border-radius: 5px;
+    outline-color: var(--blueB);
+    color: black;
+    font-size: 1em;
+}
+
+.inputBox span {
+    position: absolute;
+    top: -8px;
+    left: 15px;
+    padding: 0 10px;
+    background: white; 
+    font-size: 0.75em;
+    color: var(--blueA);
+    font-weight: 900;
+    font-size: 14px;
+}
+
+.inputBox input:focus {
+    color: black; 
+    background-color: white; 
+    outline: 0;
+    box-shadow: 0 0 0.5rem 0 rgba(163, 213, 255, 1) 
+} 
+
+/* -------------------------------------------- MODAL FOR SUCCESS AND ERROR MESSAGES -------------------------------------------- */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+  
+.modal-dialog {
+    position: relative;
+    width: auto;
+    margin: 10% auto;
+}
+  
+.modal-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    background-color: #fff;
+    border-radius: 5px;
+    margin: 0 auto;
+    padding: 10px;
+}
+  
+.modal-header {
+    padding: 10px;
+    border-bottom: 1px solid var(--blueA);
+    color: var(--blueA);
+}
+  
+.modal-body {
+    padding: 20px;
+    font-size: 16px;
+}
+  
+.modal-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+  
+.modal-title {
+    margin: 0;
+}
+
+.modal.show {
+    display: block;
+}
+  
+/* modal confirmation button */
+.btn-done {
+    color: white;
+    background-color: var(--blueA);
+    border: none;
+    border-radius: 5px;
+    width: 100px;
+    height: 40px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+/* -------------------------------------------- FORM HEADER -------------------------------------------- */
+.med-header {
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 1100px;  
+    height: 50px; 
+    background-color: var(--blueC);
+    color: var(--blueA);
+    font-weight: 900;
+    left: 65px;
 }
